# ruoxi-v2

./: .env.example  .gitignore  CHANGELOG.md  COLLABORATION.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_COMPLETION_REPORT.md  README.md  alembic.ini  docker-compose.yml  index.js  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  status_report_2026-05-23.md
.local/: README.md  ai-keys.txt.example
alembic/: env.py
config/: api-routes.yaml.template  config.yaml
core/: config_manager.py  database_models.py  exceptions.py  log_manager.py
data/: health.json  memory.json
docker/: .env.example  Dockerfile  Dockerfile.backend  Dockerfile.frontend  docker-compose.dev.yml  docker-compose.yml
docs/: API_GUIDE.md  DAY11_COMPLETION_REPORT.md  DAY12_COMPLETION_REPORT.md  DAY1_COMPLETION_REPORT.md  DAY2_COMPLETION_REPORT.md  DAY4_COMPLETION_REPORT.md  DAY5_COMPLETION_REPORT.md  DAY9_COMPLETION_REPORT.md  DEPLOY.md  DEVELOPMENT_PLAN.md  EXAMPLES.md  FINAL_110_PERCENT.md  FINAL_PERCENT98_REPORT.md  FREE_AI_APIS.md  agent-team.md  ai-arsenal.md  index.md  tools-integration.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
scripts/: check_env.py  complete-gitee-sync.sh  daily-progress-check.sh  daily-sync.sh  daily_sync.sh  deploy.sh  final-sync.sh  manage-gitee-token.sh  quick_start.py  ruoxi  setup-cron.sh  setup-gitee-token.sh  setup_cron.sh  sync-all-repos.sh  sync-gitee-credential.sh  sync-gitee-final.sh  sync-to-github.sh  test_api.py  verify-sync.sh
tests/: __init__.py  conftest.py  test_auth.py  test_chat_engine.py  test_health_records.py  test_integration.py  test_medication.py  test_performance.py  test_reports.py  test_security.py
text-renderer/: DESIGN.md  README.md  TextRenderer.css  TextRenderer.js  TextRenderer.jsx  demo.html  (+1 more)
(+141 files in other folders)
